--- a/App/android-boilerplate-master/app/build.gradle
+++ b/App/android-boilerplate-master/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion '25.0.3'
 
     defaultConfig {
-        applicationId 'uk.co.ribot.androidboilerplate'
+        applicationId 'ca.qc.hackathon2019.importtensorflowastf'
         minSdkVersion 16
         targetSdkVersion 25
         testInstrumentationRunner "${applicationId}.runner.RxAndroidJUnitRunner"
