--- a/App/android-boilerplate-master/app/src/main/AndroidManifest.xml
+++ b/App/android-boilerplate-master/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="ca.qc.hackathon2019.importtensorflowastf.BoilerplateApplication"
+        android:name="ca.qc.hackathon2019.importtensorflowastf.MyNewsCast"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
