--- a/App/android-boilerplate-master/build.gradle
+++ b/App/android-boilerplate-master/build.gradle
@@ -2,12 +2,14 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
+        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.google.gms:google-services:4.1.0'
     }
 }
 
@@ -15,6 +17,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google() // Google's Maven repository
     }
 }
 
