--- a/App/android-boilerplate-master/build.gradle
+++ b/App/android-boilerplate-master/build.gradle
@@ -9,19 +9,14 @@ buildscript {
         classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
-        classpath 'com.google.gms:google-services:4.1.0'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-        google() // Google's Maven repository
+        maven { url 'https://maven.google.com' }
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.3'
-    distributionUrl = distributionUrl.replace("bin", "all")
-}
