--- a/App/MyNewsCast/app/build.gradle
+++ b/App/MyNewsCast/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.jakewharton.timber:timber:4.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
