--- a/App/MyNewsCast/app/src/main/AndroidManifest.xml
+++ b/App/MyNewsCast/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="co.w.mynewscast">
 
     <application
+        android:name=".MyNewsCastApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
