--- a/App/MyNewsCast/app/build.gradle
+++ b/App/MyNewsCast/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     final DAGGER_VERSION = '2.5'
+    final BUTTERKNIFE_VERSION = '8.4.0'
     def daggerCompiler = "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
     implementation "com.google.dagger:dagger:$DAGGER_VERSION"
     compileOnly 'org.glassfish:javax.annotation:10.0-b28' //Required by Dagger2
@@ -30,7 +31,8 @@ dependencies {
     androidTestAnnotationProcessor daggerCompiler
 
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support:support-v4:26.0.0'
@@ -45,6 +47,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:26.0.0'
     implementation 'com.android.support:cardview-v7:26.0.0'
+
+    implementation "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
 }
 
