Husk of the experience activity file

--- a/App/MyNewsCast/app/src/main/AndroidManifest.xml
+++ b/App/MyNewsCast/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.signin.SignInActivity" />
+        <activity android:name=".ui.experience.ExperienceActivity" />
 
     </application>
 
