--- a/App/MyNewsCast/app/build.gradle
+++ b/App/MyNewsCast/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     final BUTTERKNIFE_VERSION = '8.4.0'
     def daggerCompiler = "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
     implementation "com.google.dagger:dagger:$DAGGER_VERSION"
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     compileOnly 'org.glassfish:javax.annotation:10.0-b28' //Required by Dagger2
     annotationProcessor daggerCompiler
     testAnnotationProcessor daggerCompiler
