--- a/App/MyNewsCast/app/build.gradle
+++ b/App/MyNewsCast/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.0.0'
     implementation 'com.android.support:cardview-v7:26.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     implementation "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
     annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
