Live updates from Firebase

--- a/App/MyNewsCast/app/src/main/AndroidManifest.xml
+++ b/App/MyNewsCast/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.signin.SignInActivity" />
         <activity android:name=".ui.experience.ExperienceActivity" />
         <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name=".ui.queue.QueueActivity" />
         <activity android:name=".ui.videoplayer.VideoPlayerActivity" android:configChanges="orientation" />
         <activity android:name=".ui.mediaplayer.MediaPlayerActivity" android:screenOrientation="portrait" />
 
